# tiny_stories_rl

./: README.md  docker_name  pyproject.toml  run.sh  run_tb.sh
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  reinforce_vs_rloo.md  tuning_the_kl_penalty.md  what_is_the_kl_penalty.md
src/tiny_stories_rl/: train.py
tests/: test_reward.py
