[project]
name = "tiny_stories_rl"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "beartype>=0.19.0",
    "jaxtyping>=0.2.34",
    "torch==2.4.0",
    "tqdm>=4.66.5",
    "transformers>=4.45.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["F722"]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["tiny_stories_rl"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_stories_rl"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
